--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -67,6 +67,7 @@ memory {
 volume master {
         format = " ♪ %volume "
         format_muted = " ♪ muted (%volume) "
+        #name = "volume"
 }
 
 tztime local {
